[package]
name = "oku_core"
version = "0.1.0"
edition = "2024"
resolver = "2"

[features]
dev_tools = []
dynamic_linking = []

vello_renderer = ["dep:vello", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
http_client = ["dep:reqwest"]

default = ["vello_renderer", "http_client"]


[dependencies]

oku_logging = { path = "../oku_logger" }

# Add at the next stable release.
#accesskit = "0.17.1"
#accesskit_winit = { version = "0.23.1", features = ["tokio"] }

cfg-if = "1.0.0"

[dependencies.bitflags]
version = "2.9.0"
features = ["std"]

[dependencies.peniko]
version = "0.3.1"
default-features = false
features = ["std"]

[dependencies.glam]
version = "0.30.0"
default-features = false
features = ["std"]

[dependencies.rustc-hash]
version = "2.1.1"
default-features = false
features = ["std"]

[dependencies.clipboard-rs]
version = "0.2.4"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["jpeg", "png"]

[dependencies.taffy]
version = "0.7.7"
default-features = false
features = ["std", "taffy_tree", "flexbox", "content_size", "block_layout"]

[dependencies.chrono]
version = "0.4.40"
default-features = false
features = ["std"]

[dependencies.vello]
version = "0.4.1"
default-features = false
features = ["wgpu"]
optional = true

[dependencies.wgpu]
version = "23.0.1"
default-features = false
features = ["wgsl"]
optional = true

[target.'cfg(not(target_os = "android"))'.dependencies.winit]
git = "https://github.com/rust-windowing/winit"
rev = "5cada36ae8eade018bbad035b538bc01347ff7a8"
features = []

[target.'cfg(target_os = "android")'.dependencies.winit]
git = "https://github.com/rust-windowing/winit"
rev = "5cada36ae8eade018bbad035b538bc01347ff7a8"
features = ["android-native-activity"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.parley]
version = "0.3.0"
features = ["std", "system"]
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies.parley]
version = "0.3.0"
features = ["std"]
default-features = false

[target.'cfg(not(target_os = "android"))'.dependencies.reqwest]
version = "0.12.14"
default-features = false
features = ["native-tls"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
#accesskit_winit = { version = "0.23.1" }
wasm-bindgen-futures = "0.4.50"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-time]
version = "1.1.0"
default-features = false
features = []

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.100"
default-features = false
features = ["std", "msrv"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.77"
default-features = false
features = [
    "Document",
    "Window",
    "Element",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1.44.0"
default-features = false
features = ["sync"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.44.0"
default-features = false
features = ["rt-multi-thread", "sync"]

[target.'cfg(target_os = "android")'.dependencies.reqwest]
version = "0.12.14"
default-features = false
features = ["rustls-tls"]
optional = true