[package]
name = "animations"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "animations"
path = "main.rs"

[dependencies]
util = { path = "../util" }

[dependencies.craft]
path = "../../crates/craft"
default-features = false
features = ["vello_renderer", "devtools", "accesskit"]
package = "craft_gui"
