[package]
name = "counter"
version = "0.1.0"
edition = "2024"
default-run = "counter"

[lib]
name = "counter_android"
path = "counter_android.rs"
crate-type = ["cdylib"]

[[bin]]
name = "counter"
path = "main.rs"

[dependencies]
util = { path = "../util" }

[dependencies.craft]
path = "../../crates/craft"
default-features = false
features = ["vello_renderer", "devtools"]
package = "craft_gui"