[package]
name = "counter"
version = "0.1.0"
edition = "2024"
default-run = "counter"

[[bin]]
name = "counter"
path = "main.rs"

[dependencies]
util = { path = "../util" }

[dependencies.craft]
path = "../../crates/craft"
default-features = false

[dependencies.craft_retained]
path = "../../crates/craft_retained"
default-features = false
features = ["accesskit", "system_fonts"]

[target.'cfg(not(target_os = "android"))'.dependencies.craft_renderer]
path = "../../crates/craft_renderer"
features = ["vello_hybrid_renderer"]