[package]
name = "counter_retained"
version = "0.1.0"
edition = "2024"
default-run = "counter_retained"

[[bin]]
name = "counter_retained"
path = "main.rs"

[lib]
name = "counter_android"
path = "counter_android.rs"
crate-type = ["cdylib"]

[dependencies]
util = { path = "../util" }

[dependencies.craft_retained]
path = "../../crates/craft_retained"
default-features = false
features = ["accesskit", "system_fonts"]

[target.'cfg(not(target_os = "android"))'.dependencies.craft_renderer]
path = "../../crates/craft_renderer"
features = ["vello_renderer"]

[target.'cfg(target_os = "android")'.dependencies.craft_renderer]
path = "../../crates/craft_renderer"
features = ["vello_hybrid_renderer"]