[package]
name = "custom_event_loop"
version = "0.1.0"
edition = "2024"
default-run = "custom_event_loop"

[[bin]]
name = "custom_event_loop"
path = "main.rs"

[dependencies]
util = { path = "../util" }
cfg-if = "1.0.0"
bytemuck = "1.23.0"
glam = "0.30.4"

[dependencies.wgpu]
version = "24.0.3"
default-features = false
features = ["wgsl"]

[dependencies.craft]
path = "../../crates/craft"
default-features = false
features = ["vello_renderer", "devtools", "accesskit", "sytem_fonts"]
package = "craft_gui"

[target.'cfg(not(target_os = "android"))'.dependencies.winit]
version = "0.30.11"
features = []

[target.'cfg(target_os = "android")'.dependencies.winit]
version = "0.30.11"
features = ["android-native-activity"]