[package]
name = "gallery"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gallery"
path = "main.rs"

[features]
audio = ["craft_retained/audio"]
default = ["audio"]

[dependencies]
util = { path = "../util" }

[dependencies.craft_retained]
path = "../../crates/craft_retained"
default-features = false
features = [
    "accesskit",
    "system_fonts",
    "http_client",
    "jpeg",
    "png",
    "clipboard",
    "vello_hybrid_renderer"
]