[package]
name = "jsframeworkbench"
version = "0.1.0"
edition = "2024"
default-run = "jsframeworkbench"

[[bin]]
name = "jsframeworkbench"
path = "main.rs"

[dependencies]
util = { path = "../util" }

rand = "0.9.2"

[dependencies.craft_retained]
path = "../../crates/craft_retained"
default-features = false
features = ["system_fonts"]

[dependencies.craft_renderer]
path = "../../crates/craft_renderer"
features = ["vello_renderer"]