[package]
name = "multiwindow"
version = "0.1.0"
edition = "2024"
default-run = "multiwindow"

[[bin]]
name = "multiwindow"
path = "main.rs"

[dependencies]
util = { path = "../util" }

[dependencies.craft_retained]
path = "../../crates/craft_retained"
default-features = false
features = ["accesskit", "system_fonts", "vello_hybrid_renderer"]