[package]
name = "request"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ani_list"
path = "main.rs"

[dependencies]

craft = { path = "../../crates/craft" }
util = { path = "../util" }

tracing = { workspace = true }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.133"

[dependencies.reqwest]
workspace = true
features = ["rustls-tls", "json"]