[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3.19"
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.3"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]
name = "util"
path = "src/lib.rs"